Create add tenant business logic
