# routes/tenant.route.js
@@ -1,15 +1,15 @@
 import express from "express";
 const router = express.Router();
-import { addOwner } from "../controllers/owner.controller.js";
-import ownerTenantSchema from "../validator/owner_tenant.validator.js";
+import { addTenant } from "../controllers/tenant.controller.js";
 import validatorMiddleware from "../middlewares/validator.middleware.js";
 import upload from "../middlewares/multer.middleware.js";
+import ownerTenantSchema from "../validator/owner_tenant.validator.js";
 
 router.post(
   "/",
   upload.array("images", 10),
   validatorMiddleware(ownerTenantSchema),
-  addOwner
+  addTenant
 );
 
 export default router;
